added .md comments to steps 1-5.

--- a/Project1/BreastCancerWisconsin/Cell_Irregularity_Inspection.ipynb
+++ b/Project1/BreastCancerWisconsin/Cell_Irregularity_Inspection.ipynb
@@ -112,7 +112,10 @@
     "**Understanding df.shape**\n",
     "```\n",
     "This cell prints the shape of the dataset (there are 569 rows or samples and 33 columns or features for each sample).\n",
-    "```"
+    "```\n",
+    "- How many rows (observations/patients)? 569\n",
+    "- How many columns (features)? 33\n",
+    "- What does each row represent in clinical terms? Each row represents a cytological sample (a sample of cells) from an individual's breast cancer."
    ]
   },
   {
@@ -159,17 +162,21 @@
     "\n",
     "Each of the features is a variable that we can analyze.\n",
     "\n",
+    "The naming pattern is suffix-based:\n",
+    "\n",
     "The columns that end with _mean are showing the average (mean) of the feature value across the sample.\n",
     "\n",
     "The columns that end with _se are showing the \"standard error\" of the feature or the variability/spread of that feature's measurements.\n",
     "\n",
     "The columns that end with _worst are showing the largest/most severe value of the feature.\n",
+    "\n",
+    "Some columns that may need further research are compactness, concavity, concave points, and fractal_dimension. These values come from specific nuclear geometry computations rather than direct measurements.\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "9f6e24c8-0930-4084-8f65-d4e9535847e1",
    "metadata": {},
    "outputs": [
@@ -210,12 +217,7 @@
    "metadata": {},
    "source": [
     "**Above cell is a list of all column names**  \n",
-    "*Note: the suffixes have been removed due to the instructions in breast_cancer_10point_problems. (these were Standard Error: _se, _mean, and _worst)*\n",
-    "```\n",
-    "Do you notice any pattern in the column naming convention?\n",
-    "\n",
-    "Which columns might need further research to understand?\n",
-    "```"
+    "*Note: the suffixes have been removed due to the instructions in breast_cancer_10point_problems. (these were Standard Error: _se, _mean, and _worst)*\n"
    ]
   },
   {
@@ -281,7 +283,12 @@
     "**Understanding df.dtypes**\n",
     "```\n",
     "This cell prints the name of each column (features) and the data type for each.\n",
-    "```"
+    "```\n",
+    "- All of the columns are numeric except for `diagnosis` and the final column which is unnamed (`id` is int64 while the remaining columns are float64)\n",
+    "\n",
+    "- The `diagnosis` column is an \"object\" type\n",
+    "\n",
+    "- Are there any data types that seem incorrect? The final column is unnamed and has no values in any of the rows. However, this column is still counted as float64 and all of the values are NaN"
    ]
   },
   {
@@ -349,7 +356,12 @@
     "**Understanding df.head()**\n",
     "```\n",
     "This cell prints the the first 5 rows (0-4) under the name for each column\n",
-    "```"
+    "```\n",
+    "- Most of the values are floating point numbers and a significant amount of them are **<1**\n",
+    "\n",
+    "- Do you notice anything unusual or unexpected? Only the previously mentioned unnamed column with no values.\n",
+    "\n",
+    "- What are the possible values for the `diagnosis` column? **\"M\"** for malignant or **\"B\"** for benign."
    ]
   },
   {
@@ -417,7 +429,9 @@
     "**Understanding df.tail()**\n",
     "```\n",
     "This cell prints the the last 5 rows (in this dataset rows 564-568) under the name for each column\n",
-    "```"
+    "```\n",
+    "- This data ends clearly\n",
+    "- The last rows **do** seem consistent with the first rows."
    ]
   },
   {
