Add comments to percentage calculation

--- a/Project1/BreastCancerWisconsin/Cell_Irregularity_Inspection.ipynb
+++ b/Project1/BreastCancerWisconsin/Cell_Irregularity_Inspection.ipynb
@@ -901,10 +901,13 @@
     }
    ],
    "source": [
+    "# Blank vars to store data\n",
     "category_counts = {}\n",
     "malignancy_data = []\n",
     "malignancy_category_count = 0\n",
     "benign_category_count = 0\n",
+    "\n",
+    "# Loop through the categories to calculate counts and percentages\n",
     "for category in df['concavity_category'].cat.categories:\n",
     "    count = len(df[df['concavity_category'] == category])\n",
     "    category_counts[category] = count\n",
@@ -919,18 +922,20 @@
     "    \n",
     "    malignancy_data.append(malignancy_percent)\n",
     "    print(f\"{category}: {count} cases ({malignancy_percent_string} Malignant)\")\n",
-    "    \n",
+    "\n",
+    "# Print total cases and percentages\n",
     "total_case_count = malignancy_category_count + benign_category_count\n",
     "print(f\"\\nTotal malignant: {malignancy_category_count} ({(malignancy_category_count/total_case_count):.2%})\")\n",
     "print(f\"Total benign: {benign_category_count} ({(benign_category_count/total_case_count):.2%})\")\n",
     "print(\"Total cases:\", total_case_count)\n",
     "\n",
+    "# Use matplotlib to display a horizontal bar graph\n",
     "plt.figure()\n",
     "categories = list(category_counts.keys())\n",
     "y = np.arange(len(categories))\n",
     "count = 0\n",
     "for pct in malignancy_data:\n",
-    "    malignancy_data[count] = pct * 100\n",
+    "    malignancy_data[count] = pct * 100 # Turn the raw decimal into a percent by multiplying by 100\n",
     "    count += 1\n",
     "\n",
     "plt.barh(y, malignancy_data, color=['lightblue', 'skyblue', 'orange', 'red', 'darkred'])\n",
@@ -938,8 +943,12 @@
     "plt.xlabel('Malignancy %')\n",
     "plt.title('Malignancy Rate by Concavity Category')\n",
     "plt.xlim(0, 100)\n",
+    "\n",
+    "# Label graph\n",
     "for i, pct in enumerate(malignancy_data):\n",
     "    plt.text(pct + 1, i, f'{pct:6.1f}%', va='center')\n",
+    "    \n",
+    "# Display the graph\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
