Add rows to Part 2: Data Dictionary table

--- a/Project1/BreastCancerWisconsin/Cell_Irregularity_Inspection.ipynb
+++ b/Project1/BreastCancerWisconsin/Cell_Irregularity_Inspection.ipynb
@@ -784,17 +784,28 @@
    "id": "c213ff1a-7500-4583-9430-5f35291f617d",
    "metadata": {},
    "source": [
-    "### Part 2: List of all columns"
+    "### Part 2: Data Dictionary"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "markdown",
    "id": "9ca494c4-6413-44a2-bb0c-cc7839c470a9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df = df.iloc[:, :-1]"
+    "| Column | Description | Feature Type | Valid Values/Range | Notes/Issues |\n",
+    "|--------|-------------|--------------|-------------------|--------------|\n",
+    "| `id` |Unique identifier| int64 |Numbers greater than 0|  |\n",
+    "| `diagnosis` | Is the diagnosis benign or malignant|Object|`M` or `B`| |\n",
+    "| `radius_mean` |Average distance from the center of the cell to its perimeter|float64|Positive numbers|Smaller are often benign in this dataset|\n",
+    "| `texture_mean` |standard deviation of gray-scale values within the nucleus|float64|Positive numbers|How \"rough\" the nucleus appears|\n",
+    "| `perimeter_mean` |Average length of the cell's perimeter|float64|Positive numbers| |\n",
+    "| `area_mean` |Average area if the nucleus|float64|Positive numbers|larger area = bigger cells|\n",
+    "| `smoothness_mean` |Local variation in nuclear contour|float64|Positive numbers||\n",
+    "| `compactness_mean` | | | | |\n",
+    "| `concavity_mean` | | | | |\n",
+    "| `concave points_mean` | | | | |\n",
+    "| `symmetry_mean` | | | | |\n",
+    "| `fractal_dimension_mean` | | | | |"
    ]
   },
   {
